--- a/cuk/dl4office_worker/ch9_1_seq2seq_kor_keras_with_embedding.ipynb
+++ b/cuk/dl4office_worker/ch9_1_seq2seq_kor_keras_with_embedding.ipynb
@@ -15,6 +15,16 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/aifactory-team/AFClass/blob/master/cuk/dl4office_worker/ch9_1_seq2seq_kor_keras_with_embedding.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "T1sg7g593SeN"
