--- a/aifactory/seq2seq_kor2keras_with_embedding.ipynb
+++ b/aifactory/seq2seq_kor2keras_with_embedding.ipynb
@@ -677,7 +677,7 @@
         "model = Model([encoder_inputs, decoder_inputs], decoder_outputs)\n",
         "\n",
         "# Run training\n",
-        "model.compile(optimizer='rmsprop', loss='categori     cal_crossentropy', metrics=['accuracy'])\n",
+        "model.compile(optimizer='rmsprop', loss='categorical_crossentropy', metrics=['accuracy'])\n",
         "\n",
         "hist = model.fit([encoder_input_data, decoder_input_data], decoder_target_data_onehot,\n",
         "          batch_size=64,\n",
